Style fix to avoid cards collapsing into each other when modal is open

--- a/src/styles/components/Card.css
+++ b/src/styles/components/Card.css
@@ -1,5 +1,8 @@
-.ancillary-card + .ancillary-card {
-  margin-top: 12px;
+.ancillaries-cards-container {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  row-gap: 12px;
 }
 
 .ancillary-card:disabled {
